--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
 click==7.1.2
+Django==3.1.2
+firebase-admin==4.4.0
 google-api-core==1.22.4
 google-api-python-client==1.12.3
 google-auth==1.22.1
