--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-step-progress": "^1.0.3",
+    "react-step-progress-bar": "^1.0.3",
     "rsuite": "^4.8.2"
   },
   "scripts": {
