--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "bootstrap": "^4.5.2",
     "moment": "^2.29.1",
     "react": "^16.13.1",
-    "react-big-calendar": "^0.28.1",
+    "react-big-calendar": "0.18.0",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-icons": "^1.0.0",
     "react-dom": "^16.13.1",
