--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cffi==1.14.3
 chardet==3.0.4
 click==7.1.2
 Django==3.1.2
+django-cors-headers==3.5.0
 firebase-admin==4.4.0
 google-api-core==1.22.4
 google-api-python-client==1.12.3
