--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ chardet==3.0.4
 click==7.1.2
 Django==3.1.2
 django-cors-headers==3.5.0
+djangorestframework==3.12.1
 firebase-admin==4.4.0
 google-api-core==1.22.4
 google-api-python-client==1.12.3
